--- a/client_config.ini
+++ b/client_config.ini
@@ -1,7 +1,7 @@
 [Global]
 http_url = https://api.devnet.solana.com
 ws_url = wss://api.devnet.solana.com/
-payer_path = id.json
+payer_path = /Users/jarettdunn/.config/solana/id.json
 admin_path = adMCyoCgfkg7bQiJ9aBJ59H3BXLY3r5LNLfPpQfMzBe.json
 raydium_cp_program = CPMDWBwJDtYax9qW7AyRuVC19Cc4L4Vcy4n2BHAbHkCW
 slippage = 0.01
