--- a/client_config.ini
+++ b/client_config.ini
@@ -1,7 +1,7 @@
 [Global]
-http_url = https://api.devnet.solana.com
-ws_url = wss://api.devnet.solana.com/
+http_url = https://rpc.ironforge.network/mainnet?apiKey=01HRZ9G6Z2A19FY8PR4RF4J4PW
+ws_url = wss://rpc.ironforge.network/mainnet?apiKey=01HRZ9G6Z2A19FY8PR4RF4J4PW
 payer_path = /Users/jarettdunn/.config/solana/id.json
 admin_path = adMCyoCgfkg7bQiJ9aBJ59H3BXLY3r5LNLfPpQfMzBe.json
-raydium_cp_program = CPMDWBwJDtYax9qW7AyRuVC19Cc4L4Vcy4n2BHAbHkCW
+raydium_cp_program = JBa1yhgTqaHeLFi3Ao14dabeoswM76G2jVsFS5RbiTNv
 slippage = 0.01
